# Data-Project-Template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  apt.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/library-scripts/: git-lfs-debian.sh
devcontainer/: Dockerfile  devcontainer.json
frozen/: README.md
notebooks/: README.md
processors/: README.md
shared/: README.md
tasks/: README.md
tasks/1-extract-data/: Makefile
tasks/2-clean-data/: Makefile
tasks/3-merge-data/sub1/: Makefile
tasks/3-merge-data/sub2/: Makefile
