[tool.poetry]
name = "data-journalism-project"
version = "0.1.0"
description = "A data journalism project template."

[tool.poetry.dependencies]
python = "^3.8"
black = "*"
pylint = "*"
jupyter = "*"
pandas = "*"
csvkit = "*"
geopandas = "*"
pandera = {extras = ["io"], version = "*"}
matplotlib = "*"
seaborn = "*"
hvplot = "*"
folium = "*"
tqdm = "*"
pyyaml = "*"
pdfplumber = "*"
airtable = "*"
python-dotenv = "*"
lxml = "*"
openpyxl = "*"
rtree = "*"
thefuzz = "*"
python-levenshtein = "*"
notebook-as-pdf = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
